force-app/main/default/objects/JMS_Staging_Metadata__mdt/JMS_Staging_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Staging Metadata</label>
    <pluralLabel>Staging Metadatas</pluralLabel>
</CustomObject>