force-app/main/default/objects/JMS_Staging_Metadata__mdt/fields/Is_Number_Datatype__c.field-meta.xml
<CustomField>
    <fullName>Is_Number_Datatype__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Number Datatype</label>
    <type>Checkbox</type>
</CustomField>