force-app/main/default/objects/JMS_Staging_Metadata__mdt/fields/JMS_Constant_Value__c.field-meta.xml
<CustomField>
    <fullName>JMS_Constant_Value__c</fullName>
    <description>Will hold the constant value we need to map</description>
    <label>Constant Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>