force-app/main/default/objects/JMS_Staging_Metadata__mdt/fields/JMS_IsActive__c.field-meta.xml
<CustomField>
    <fullName>JMS_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsActive</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>