force-app/main/default/objects/JMS_Staging_Metadata__mdt/fields/JMS_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>JMS_Object_Type__c</fullName>
    <description>Object types</description>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JMS_Broker_Call_Staging__c</fullName>
                <default>true</default>
                <label>JMS_Broker_Call_Staging__c</label>
            </value>
            <value>
                <fullName>JMS_Campaign_Target_Staging__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>