force-app/main/default/objects/JMS_Staging_Metadata__mdt/fields/JMS_SF_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_SF_Api_Name__c</fullName>
    <description>SF Api Name</description>
    <label>SF Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>