force-app/main/default/objects/JMS_Staging_Metadata__mdt/fields/JMS_SFDC_Object__c.field-meta.xml
<CustomField>
    <fullName>JMS_SFDC_Object__c</fullName>
    <description>SFDC Object</description>
    <label>SFDC Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>