force-app/main/default/objects/JMS_Staging_Metadata__mdt/fields/JMS_Staging_Api_Field__c.field-meta.xml
<CustomField>
    <fullName>JMS_Staging_Api_Field__c</fullName>
    <description>Staging Api Field</description>
    <label>Staging Api Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>