force-app/main/default/objects/JMS_Staging_Metadata__mdt/listViews/New_staging_View.listView-meta.xml
<ListView>
    <fullName>New_staging_View</fullName>
    <columns>JMS_SFDC_Object__c</columns>
    <columns>JMS_SF_Api_Name__c</columns>
    <columns>JMS_IsActive__c</columns>
    <columns>JMS_Object_Type__c</columns>
    <columns>JMS_Staging_Api_Field__c</columns>
    <columns>JMS_Constant_Value__c</columns>
    <columns>Is_Number_Datatype__c</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JMS_IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>New staging View</label>
</ListView>